--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,10 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M4</version>
                 <configuration>
+                    <includes>
+                        <include>**/*Test.java</include>
+                    </includes>
+
                     <testFailureIgnore>true</testFailureIgnore>
                     <shutdown>kill</shutdown>
                     <argLine>
